log/build_2025-08-27_13-52-49/pixhawk_control/stdout_stderr.log
running egg_info
creating ../../build/pixhawk_control/pixhawk_control.egg-info
writing ../../build/pixhawk_control/pixhawk_control.egg-info/PKG-INFO
writing dependency_links to ../../build/pixhawk_control/pixhawk_control.egg-info/dependency_links.txt
writing requirements to ../../build/pixhawk_control/pixhawk_control.egg-info/requires.txt
writing top-level names to ../../build/pixhawk_control/pixhawk_control.egg-info/top_level.txt
writing manifest file '../../build/pixhawk_control/pixhawk_control.egg-info/SOURCES.txt'
reading manifest file '../../build/pixhawk_control/pixhawk_control.egg-info/SOURCES.txt'
writing manifest file '../../build/pixhawk_control/pixhawk_control.egg-info/SOURCES.txt'
running build
running build_py
creating /workspace/build/pixhawk_control/build/lib/pixhawk_control
copying pixhawk_control/connect_pixhawk.py -> /workspace/build/pixhawk_control/build/lib/pixhawk_control
copying pixhawk_control/connect_debug.py -> /workspace/build/pixhawk_control/build/lib/pixhawk_control
copying pixhawk_control/__init__.py -> /workspace/build/pixhawk_control/build/lib/pixhawk_control
running install
running install_lib
creating /workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control
copying /workspace/build/pixhawk_control/build/lib/pixhawk_control/connect_pixhawk.py -> /workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control
copying /workspace/build/pixhawk_control/build/lib/pixhawk_control/connect_debug.py -> /workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control
copying /workspace/build/pixhawk_control/build/lib/pixhawk_control/__init__.py -> /workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control
byte-compiling /workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control/connect_pixhawk.py to connect_pixhawk.cpython-310.pyc
byte-compiling /workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control/connect_debug.py to connect_debug.cpython-310.pyc
byte-compiling /workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control/__init__.py to __init__.cpython-310.pyc
running install_data
creating /workspace/install/pixhawk_control/share/ament_index/resource_index/packages
copying resource/pixhawk_control -> /workspace/install/pixhawk_control/share/ament_index/resource_index/packages
copying package.xml -> /workspace/install/pixhawk_control/share/pixhawk_control
running install_egg_info
Copying ../../build/pixhawk_control/pixhawk_control.egg-info to /workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control-0.0.0-py3.10.egg-info
running install_scripts
writing list of installed files to '/workspace/build/pixhawk_control/install.log'
/usr/local/lib/python3.10/dist-packages/setuptools/_distutils/dist.py:261: UserWarning: Unknown distribution option: 'tests_require'
  warnings.warn(msg)
  File "/workspace/install/pixhawk_control/lib/python3.10/site-packages/pixhawk_control/connect_pixhawk.py", line 36
    python3 -c "import mavsdk, sys; print('mavsdk', mavsdk.__version__)"
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

